return code from refreshing metadata not checked in merge

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.5.3
    • Affects Version/s: None
    • Component/s: None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The merge command does not check whether or not it's refresh of metadata was successful, resulting in a confusing error message and continuing to merge with stale metadata.

      This is probably not dangerous since applyOps has a version precondition, but we should not merge in general if we can't talk to the config server.

            Assignee:
            Greg Studer (Inactive)
            Reporter:
            Greg Studer (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: