SERVER-10977 check return value from metadata refresh in merge chunks